<resources>
    <string name="app_name">xForm</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Login Screen</string>
    <string name="username">Username:</string>
    <string name="password">Password:</string>
    <string name="Login">Login</string>
    <string name="attempts">Attempts Left</string>
    <string name="title_activity_result">ResultActivity</string>
    <string name="title_activity_form">Form List</string>
    <string name="signIn">Sign In</string>
    <string name="title_activity_form_response">FormResponse</string>
    <string name="placeholder_username">Username/Email</string>
    <string name="placeholder_password">Password</string>
    <string name="title_activity_advanceview">advanceview</string>
    <string name="title_activity_webview">webview</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="hello_round">Hello Round World!</string>
    <string name="hello_square">Hello Square World!</string>
    <string name="title_activity_draft_form">DraftFormActivity</string>
    <string name="title_activity_draft_response">DraftResponseActivity</string>
    <string name="pull_to_refresh_pull_label">Pull to refresh...</string>
    <string name="pull_to_refresh_release_label">Release to refresh...</string>
    <string name="pull_to_refresh_refreshing_label">Loading...</string>
    <string name="pull_to_refresh_tap_label">Tap to refresh...</string>
    <string name="title_activity_upload">UploadActivity</string>
    <string name="title_activity_splash_activity">Xformbuilder</string>
    <string name="title_activity_notification_test">notification_test</string>
    <string name="title_activity_view_file">ViewFileActivity</string>

    <string name="AppId">20a9d85f-3a67-4c91-be5b-0aff74fa00df</string>
    <string name="AppKey">61993513-c1c5-4ce1-aacd-3d37e36627b7</string>



    <string name="LoginProcess">Login process</string>
    <string name="PleaseWait">Please wait</string>
     <string name="SyncProcess">Synchronization processes</string>
    <string name="SessionTimeOut">Your session expired, please login again.</string>
    <string name="CheckYourInfo">Please check your login credentials.</string>
    <string name="Exit">Would you like to exit?</string>
    <string name="Yes">Yes</string>
    <string name="No">No</string>
    <string name="GetFormDataError">There is an error when getting form datas, please login again.</string>
    <string name="LogOut">Would you to logout ?</string>
    <string name="ThereAreFillFields">There are fields to fill correctly!</string>
    <string name="FormSaveAsDraft">Form was saved as draft</string>
    <string name="UnsavedEdits">You could have unsaved edits to this page. Are you sure to exit ?</string>
    <string name="CheckYourNetwork">Please check your internet connection.</string>
    <string name="NoUser">There is no user with this credentials.</string>
    <string name="OK">OK</string>
    <string name="SavedProcess">Saved Process</string>
    <string name="Error">Hata var Panik Yok bekleyin</string>
    <string name="UploadForms">We are uploading your forms.</string>
    <string name="UploadFormsError">There was an error when uploading datas, please wait.</string>
    <string name="LoadForms">We are loading your forms.</string>
    <string name="NoDataForms">There is no data with this form, you are being redirected to form list.</string>
    <string name="AllDataDelete">Are you sure you want to delete all your datas ?</string>

    <string name="Settings">Settings</string>
    <string name="DraftList">Draft List</string>
    <string name="FormList">Form List</string>
    <string name="ViewerPicture">Viewer Picture</string>
    <string name="FileCorrupted">Selected file is corrupted or another file select.You are being redirected to organize data.</string>
    <string name="Skip">Skip</string>

    <string name="About">ABOUT</string>
    <string name="Maintenance">MAINTENANCE</string>
    <string name="Advanced">ADVANCED</string>
    <string name="AboutX">About Xformbuilder</string>
    <string name="Version">Version:1.0.1.2</string>
    <string name="ContactXformbuilder">Contact Xformbuilder</string>
    <string name="CleanLocal">Clean local database</string>
    <string name="AutoSync">Auto sync</string>
    <string name="PushNotification">Enable push notification</string>
    <string name="CleanLocalDesc">Select to clear all data from local database</string>
    <string name="title_activity_test_swipe_layout">TestSwipeLayout</string>
    <string name="delete">Delete</string>

    <string name="cancel">Cancel</string>






</resources>
