<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="#ffffff"
    android:gravity="center">
    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="none"
        android:background="@null">
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:id="@+id/mainLinear"
        android:padding="15dp">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/logoLinear">
            <ImageView
                android:layout_width="fill_parent"
                android:layout_height="155dp"
                android:id="@+id/imageView"
                android:src="@mipmap/xformbuilder" />
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/border"
                android:layout_marginTop="25dp">
                <EditText
                    android:layout_width="fill_parent"
                    android:layout_height="43dp"
                    android:id="@+id/editText_userName"
                    android:paddingLeft="10dp"
                    android:background="@null"
                    android:layout_marginTop="4dp"
                    android:text="admin"
                    android:hint="@string/placeholder_username"
                    android:singleLine="true" />

            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_marginTop="10dp"
                android:background="@drawable/border">

                <EditText
                    android:layout_width="fill_parent"
                    android:layout_height="43dp"
                    android:inputType="textPassword"
                    android:ems="10"
                    android:id="@+id/editText_password"
                    android:paddingLeft="10dp"
                    android:background="@null"
                    android:hint="@string/placeholder_password"
                    android:text="admin"
                    android:singleLine="true"
                    android:layout_marginTop="4dp" />
            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_marginTop="10dp">

                <Button
                    android:layout_width="fill_parent"
                    android:layout_height="50dp"
                    android:text="@string/signIn"
                    android:id="@+id/button_login"
                    android:hint="@string/signIn"
                    android:background="@drawable/login_button"
                    android:textColor="#ffffff"
                    android:textSize="20dp" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
    </ScrollView>
</RelativeLayout>
